# track_vehicle

./: README.md
gazebo_continuous_track/: CMakeLists.txt
gazebo_continuous_track/urdf_xacro/: macros_common_gazebo.urdf.xacro
gazebo_odometry/gazebo_odometry/: CMakeLists.txt  package.xml
gazebo_terrain_tutorial/launch/: rough.launch  terrain_1.launch
gazebo_terrain_tutorial/worlds/: rough.world
local_planner/launch/: local_planner.launch
local_planner/src/: localPlanner.cpp
results/: 111.py
results/num1/: lio_sam_mapping_odometry.txt  lio_sam_test.bag  odom.txt  odom11111.txt
results/num2/: 2024-05-19-16-15-11.bag  lio_sam_mapping_odometry.txt  odom.txt  odom_g.txt
results/num3/: lio_sam_mapping_odometry.txt  lio_sam_mapping_odometry_incremental.txt  odom.txt  odometry_imu.txt  odometry_imu_incremental.txt
results/num4/: odom.txt  (+4 more)
track_vehicle_me/: CMakeLists.txt  package.xml
track_vehicle_me/config/: joint_names_track_vehicle_me.yaml  show_robot.rviz
track_vehicle_me/launch/: display.launch  gazebo.launch  nav_preparation.launch  perform_rviz.launch  show.launch  simulation.launch
track_vehicle_me/meshes/: IMU_link.STL  base_link.STL  camera_link.STL  drive_wheel_left_link.STL  drive_wheel_right_link.STL  guide_wheel_left_link.STL  guide_wheel_right_link.STL  laser_link.STL  left_base_link.STL  right_base_link.STL  sensor_frame_link.STL
track_vehicle_me/src/: track_vehicle_teleop.cpp  turn.cpp
track_vehicle_me/urdf/: track_vehicle_base.xacro  track_vehicle_me.csv  track_vehicle_me.urdf
track_vehicle_me/world/: mountain.world  test.world
track_vehicle_me/xacro/: laser_support.xacro  macros_track.urdf.xacro  macros_trackvehicle_parameters.urdf.xacro  sensor_test.xacro  track_vehicle.urdf.xacro  track_vehicle_gazebo.urdf.xacro
(+20 files in other folders)
